--- a/public/css/care/layout.less
+++ b/public/css/care/layout.less
@@ -48,6 +48,7 @@ table.table>tbody>tr>td {
 td {
   padding: 0;
   position: relative;
+  overflow: hidden;
 
   div {
     max-height: @table-cell-max-height;
