--- a/public/css/patients/layout.less
+++ b/public/css/patients/layout.less
@@ -16,6 +16,7 @@ table.table>tbody>tr>td {
   td {
   	padding: 0;
   	position: relative;
+    overflow: hidden;
 
   	div {
   		max-height: @table-cell-max-height;
